# live-wallpaper-linuxmint

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml
assets/: cinnamon-wallpaper-autostart.desktop  cinnamon-wallpaper.desktop  config.toml
debian/: postinst
src/: config.rs  desktop.rs  gsettings_wallpaper.rs  gui.rs  instance.rs  main.rs  video.rs  window.rs
